--- a/watchlist-env/templates/index.html
+++ b/watchlist-env/templates/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{{ username }}'s Watchlist</title>
+    <title>{{ username }}的游戏列表</title>
     <link rel="icon" href="{{ url_for('static',filename='favacon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='style/css.css') }}">
 </head>
 <body>
-    <h2>{{ username }}'s Watchlist
+    <h2>{{ username }}'的游戏列表</h2>
         <img alt="avatar" class='avatar' src="{{ url_for('static', filename='images/我是一个PNG示例图.png') }}" style="width: 50px; height: 50px;">
     </h2>
     <p>{{ games|length }} Titles</p>
     <img alt="一寸照片样例.jpeg" class=totoro src="{{ url_for('static', filename='images/一寸照片样例.jpeg') }}" style="width: 50px; height: 50px;">
     <ul class = 'game-list'>
-        {% for g in games %}  {# 迭代 movies 变量 #}
-        <li>{{ g.title }} - {{ g.name }}</li>  
+        {% for g in games %} 
+        <li>{{ g.gamename }} - {{ g.type }}</li>  
         {% endfor %} 
     </ul>
     
